# Physical-Communication-Project

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  uhd_driver_test.py
notebooks/: 00-Notes.ipynb  01-FFT.ipynb  02-Spectrogram.ipynb  03-PSK Noise.ipynb  04-UHD drivers test.ipynb  05 - UHD Driver Test.ipynb  06 - QAM + RRC defiltering.ipynb
notebooks/timer/: timer.py
