[tool.poetry]
name = "PhysCommTests"
version = "0.1.0"
description = "A collection of tests on DSP & SDR"
authors = ["Minigrim0 <grimauflorent@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
mako = "^1.2.3"
docutils = "^0.19"
requests = "^2.28.1"
ruamel-yaml = "^0.17.21"
setuptools = "^65.5.0"
ipykernel = "^6.16.1"
scikit-commpy = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
